<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp"    tools:context="com.uniquindio.android.electiva.campusuq.fragments.MailboxFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sugerencias_propuestas"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.GridLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/grid_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/transparent_rectangle"
                    app:columnCount="4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asunto_sugerencia"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/revisando"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/declinado"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/corregido"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp" />

                </android.support.v7.widget.GridLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </ScrollView>

</LinearLayout>
