<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.uniquindio.android.electiva.campusuq.fragments.NoticeDetailFragment">>

    <ImageView
        android:id="@+id/imagen_detalle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/descripcion_imagen_detalle"
        android:src="@drawable/detalle_noticia" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/titulo_de_detalle_noticia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/texto_titulo_de_noticia"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_de_detalle_noticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_id_de_noticia"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/fecha_de_detalle_noticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_fecha_de_noticia"
                android:textSize="20dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/descripcion_de_detalle_noticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_detalle_de_noticia"
                android:textSize="@dimen/detalle_texto_descripción"
                android:layout_marginBottom="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btn_compartir_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/facebook"
                    app:backgroundTint="#ffffff"
                    app:fabSize="normal"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btn_compartir_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/twitter"
                    app:backgroundTint="#ffffff"
                    app:fabSize="normal"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>